--- a/css/style.css
+++ b/css/style.css
@@ -2,18 +2,19 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 header{
     background-color: rgb(0, 0, 0);
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     padding: 30px 30px;
-    font-family: "Roboto", sans-serif;
 }
 .nav{
 display: flex;  
+flex-wrap: wrap;
 justify-content: center;
 align-items: center;
 }
@@ -22,11 +23,18 @@ align-items: center;
     width: 100%;
     color: white;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     font-size: 20px;
 }
 
+.titulo{
+    text-shadow: 1px  0px 0px black,
+    0px  1px 0px black,
+    -1px  0px 0px black,
+    0px -1px 0px black;
+}
 .navbar{
     display: flex;
     list-style-type: none;
@@ -43,23 +51,27 @@ align-items: center;
 .banner{
     color: white;
     width: 100%;
-    height: 1000px;
+    height: 600px;
     font-size: 150px;
-    padding-top: 120px;
-    padding-bottom: 50px;
+    padding-top: 100px;
+    padding-bottom: 15px;
     background-image: url("../assets/IMAGENES/hombre-asiatico-sosteniendo-su-patineta.jpg");
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    font-family: "Roboto", system-ui;
     font-size: 50px;
     align-items: center;
     text-align: center;
+    flex-direction: column;
 
 }
-
-.titulo2{
+.titulo-productos{
     text-align: center;
-    
+    padding-top: 50px;
+    text-decoration: solid;
+    text-shadow: 1px  0px 0px black,
+    0px  1px 0px black,
+    -1px  0px 0px black,
+    0px -1px 0px black;
 }
 .cambios{
     width: 100%;
@@ -79,39 +91,49 @@ align-items: center;
     justify-content: center;
 }
 .card-container{
-    background-color: rgb(0, 0, 0);
-    width: 300px;
-    height: 350px;
-    text-align: center;
-    margin: 100px;
-}
-.card-container div img{
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    justify-content: space-between;
-    width: 400px;
-    height: 400px; 
-
-}
-.container-productos{
-    margin-top: 60px;
-    margin-bottom: 20px;
-    height: 1000px;
+    height: 100px;
+    width: 200px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    font-family: "Roboto", sans-serif;
-    align-items: center;
-    text-align: center;
-
+    flex-wrap: wrap;
+    margin: 70px;
+    margin-bottom: 500px;
+    text-size-adjust: 5px;
 }
+
+.card-container div{
+    width: 100%;
+    height:350px;
+    display: flex;
+}
+
+.card-container article{
+    width: 5000px;
+}
+.container-productos{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    justify-content: space-evenly;
+}
+
 
 .boton-comprar{
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 5px;
     padding-right: 5px;
+    align-items: center;
+    text-align: center;
+}
+.boton-comprar-tienda{
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
     align-items: center;
 }
 .boton-comprar:hover{
@@ -193,7 +215,6 @@ align-items: center;
     border-radius:4px ;
     color: white;
     box-shadow: 7px 13px 37px #000000 ;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .form-registro h4{
     font-size: 22px;
@@ -215,7 +236,6 @@ align-items: center;
     border-radius: 4px;
     margin-bottom: 16px;
     border: 1px solid blanchedalmond;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .form-registro p{
     height: 40px;
@@ -240,8 +260,4 @@ align-items: center;
 
 .nosotros{
     background-color: gray;
-}
-
-.nosotros__bg{
-    
 }
